syntax = "proto3";

package peace.services.bancho;
import "peace/services/bancho_state.proto";

service BanchoRPC {
  rpc BatchProcessBanchoPackets(BatchProcessBanchoPacketsRequest)
      returns (HandleCompleted);
  rpc ProcessBanchoPacket(ProcessBanchoPacketRequest) returns (HandleCompleted);

  rpc Login(LoginRequest) returns (LoginSuccess);
  rpc Ping(PingRequest) returns (HandleCompleted);
  rpc RequestStatusUpdate(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc PresenceRequestAll(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc RequestStats(StatsRequest) returns (HandleCompleted);
  rpc ChangeAction(ChangeActionRequest) returns (HandleCompleted);
  rpc ReceiveUpdates(ReceiveUpdatesRequest) returns (HandleCompleted);
  rpc ToggleBlockNonFriendDms(ToggleBlockNonFriendDmsRequest)
      returns (HandleCompleted);
  rpc UserLogout(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc RequestPresence(PresenceRequest) returns (HandleCompleted);
  rpc SpectateStop(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc SpectateCant(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc LobbyPart(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
  rpc LobbyJoin(peace.services.bancho_state.RawUserQuery) returns (HandleCompleted);
}

message HandleCompleted { optional bytes packets = 1; }

message PingRequest {}

message ClientHashes {
  string path_hash = 1;
  string adapters = 2;
  string adapters_hash = 3;
  string uninstall_id = 4;
  string disk_id = 5;
}

message LoginRequest {
  string username = 1;
  string password = 2;
  string client_version = 3;
  int32 utc_offset = 4;
  bool display_city = 5;
  bool only_friend_pm_allowed = 6;
  ClientHashes client_hashes = 7;
}

message LoginSuccess {
  string session_id = 1;
  string signature = 2;
  int32 user_id = 3;
  bytes packets = 4;
}

message StatsRequest {
  int32 user_id = 1;
  repeated int32 request_users = 2;
}

message ChangeActionRequest {
  int32 user_id = 1;
  int32 online_status = 2;
  string description = 3;
  string beatmap_md5 = 4;
  uint32 mods = 5;
  int32 mode = 6;
  int32 beatmap_id = 7;
}

message ReceiveUpdatesRequest {
  int32 user_id = 1;
  int32 presence_filter = 2;
}

message ToggleBlockNonFriendDmsRequest {
  int32 user_id = 1;
  bool toggle = 2;
}

message PresenceRequest {
  int32 user_id = 1;
  repeated int32 request_users = 2;
}

message BatchProcessBanchoPacketsRequest {
  int32 user_id = 1;
  bytes packets = 3;
}

message ProcessBanchoPacketRequest {
  int32 user_id = 1;
  int32 packet_id = 3;
  optional bytes payload = 4;
}
